--- a/index.html
+++ b/index.html
@@ -21,29 +21,21 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Contacte-nos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+                <a class="nav-link active" aria-current="page" href="presencaOnline.html">Presença Online</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link active" aria-current="page" href="socialNetworks.html">Gestão Redes Sociais</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="onlineAds.html">Publicidade Online</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Procurar</button>
             </form>
           </div>
         </div>
@@ -55,14 +47,71 @@
             <img src="./images/stephen-dawson-qwtCeJ5cLYs-unsplash.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="500" loading="lazy">
           </div>
           <div class="col-lg-6">
-            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Responsive left-aligned hero with image</h1>
-            <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Desbloqueie o Potencial da Sua Marca com Soluções de Marketing Especializadas</h1>
+            <p class="lead">Eleve o seu Negócio com Estratégias Baseadas em Dados, Campanhas Criativas e Resultados Impulsionados pelo ROI. Associe-se a Nós para Alcançar a Excelência em Marketing!</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-              <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Contacte-nos</button>
             </div>
           </div>
         </div>
+      </div>
+      <div class="container">
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+              <img src="./images/web-svgrepo-com.svg" alt="web" height="50px">
+            </div>
+            <div>
+              <h3 class="fs-2 text-body-emphasis">Presença Online</h3>
+              <p>Desde o design cativante de websites e a otimização estratégica de SEO até narrativas envolventes em redes sociais e publicidade direcionada, criamos uma sólida pegada digital. A nossa abordagem orientada por dados promove a visibilidade da marca, interações autênticas com os clientes e sucesso online geral.</p>
+              <a href="#" class="btn btn-primary">
+                Saber Mais
+              </a>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+              <img src="./images/comment-svgrepo-com.svg" alt="web" height="50px">
+            </div>
+            <div>
+              <h3 class="fs-2 text-body-emphasis">Gestão de Redes Sociais</h3>
+              <p>Eleve a presença online da sua marca com a nossa agência de marketing de alta qualidade. A nossa experiente equipa de gestão de redes sociais está dedicada a criar campanhas personalizadas, promover o envolvimento e medir o sucesso. Desde aumentar o reconhecimento da marca até impulsionar a geração de leads, aproveitamos o poder das redes sociais para amplificar o seu impacto. Junte-se a nós e liberte o verdadeiro potencial da sua marca através de uma gestão estratégica de redes sociais.</p>
+              <a href="#" class="btn btn-primary">
+                Saber Mais
+              </a>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+              <img src="./images/advertisement-broadcast-global-svgrepo-com.svg" alt="web" height="50px">
+            </div>
+            <div>
+              <h3 class="fs-2 text-body-emphasis">Publicidade Online</h3>
+              <p> Desde banners que captam a atenção até promoções direcionadas nas redes sociais, utilizamos insights baseados em dados para garantir que a sua mensagem ressoe junto do público certo. Com foco no retorno do investimento, a nossa equipa experiente otimiza constantemente as campanhas para um impacto máximo. Eleve o sucesso da sua marca com a nossa experiência em publicidade online.</p>
+              <a href="#" class="btn btn-primary">
+                Saber Mais
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <p class="col-md-4 mb-0 text-body-secondary">© 2022 Rubrica Virtuosa</p>
+      
+          <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+          </a>
+      
+          <ul class="nav col-md-4 justify-content-end">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+          </ul>
+        </footer>
       </div>
 </body>
 </html>
